--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,17 +73,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: OpenSans Bold
+      fonts:
+        - asset: assets/fonts/OpenSans/OpenSans-Bold.ttf
+    - family: OpenSans Italic
+      fonts:
+        - asset: assets/fonts/OpenSans/OpenSans-Italic.ttf
+    - family: OpenSans Regular
+      fonts:
+        - asset: assets/fonts/OpenSans/OpenSans-Regular.ttf
+    - family: Inter Regular
+      fonts:
+        - asset: assets/fonts/Inter/Inter_24pt-Regular.ttf
+    - family: Inter Bold
+      fonts:
+        - asset: assets/fonts/Inter/Inter_18pt-Bold.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
