--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: adora_mobile_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -33,7 +33,25 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  dio: ^5.8.0+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  pretty_dio_logger: ^1.4.0
+  shared_preferences: ^2.5.3
+  multi_select_flutter: ^4.1.3
+  uuid: ^4.5.1
+  dartz: ^0.10.1
+  path_provider: ^2.1.5
+  equatable: ^2.0.7
+  image_picker: ^1.1.2
+  awesome_dio_interceptor: ^1.3.0
+  json_annotation: ^4.9.0
+  connectivity_plus: ^6.1.4
+  permission_handler: ^12.0.0+1
+  json_serializable: 6.9.0
+  get_it: ^8.0.3
+  flutter_bloc: ^9.1.1
+
 
 dev_dependencies:
   flutter_test:
@@ -45,13 +63,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  hive_generator: ^2.0.1
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -59,8 +79,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/logo_mark.png
-    - assets/images/word_mark.png
+    - assets/images/
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -89,6 +109,6 @@ flutter:
     - family: Inter Bold
       fonts:
         - asset: assets/fonts/Inter/Inter_18pt-Bold.ttf
-  #
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
