--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   json_serializable: 6.9.0
   get_it: ^8.0.3
   flutter_bloc: ^9.1.1
+  flutter_secure_storage: ^9.0.0
+
 
 
 dev_dependencies:
