--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   get_it: ^8.0.3
   flutter_bloc: ^9.1.1
   flutter_secure_storage: ^9.0.0
+  mocktail: ^1.0.1
+  bloc_test: ^10.0.0
+
 
 
 
