--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,17 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   mocktail: ^1.0.1
   bloc_test: ^10.0.0
-
+  mime: ^2.0.0
+  http_parser: ^4.1.2
+  http: ^0.13.5
+  bloc: ^9.0.0
+  url_launcher: ^6.3.2
+  sensors_plus: ^6.1.1
+  fluttertoast: ^8.2.12
+  fl_chart: ^1.0.0
+  device_info_plus: ^11.5.0
+  proximity_sensor: ^1.3.8
+  
 
 
 
@@ -68,7 +78,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  build_runner: ^2.4.15
+  build_runner: ^2.4.14
   hive_generator: ^2.0.1
   json_serializable: ^6.7.1
   flutter_launcher_icons: ^0.14.4
